完成保存功能。

--- a/app/src/main/res/layout/activity_edit_wallpaper.xml
+++ b/app/src/main/res/layout/activity_edit_wallpaper.xml
@@ -14,6 +14,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
+            android:onClick="save"
             android:text="@string/save_wallpaper"/>
 
         <Button
