--- a/app/src/main/res/layout/activity_my_wallpaper.xml
+++ b/app/src/main/res/layout/activity_my_wallpaper.xml
@@ -10,6 +10,7 @@
         android:id="@+id/new_wallpaper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="new_wallpaper"
         android:text="@string/new_wallpaper" />
 
     <ListView
