--- a/app/src/main/res/layout/activity_edit_wallpaper.xml
+++ b/app/src/main/res/layout/activity_edit_wallpaper.xml
@@ -16,12 +16,14 @@
             android:layout_height="wrap_content"
             android:onClick="save"
             android:text="@string/save_wallpaper"/>
+
         <Button
             android:id="@+id/apply_wallpaper"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/apply_wallpaper"/>
+            android:layout_weight="1"
+            android:onClick="apply"
+            android:text="@string/apply_wallpaper" />
 
         <Button
             android:id="@+id/delete_wallpaper"
