支持“当前使用的壁纸”功能和短按长按事件。

--- a/app/src/main/res/layout/activity_current_wallpaper.xml
+++ b/app/src/main/res/layout/activity_current_wallpaper.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".CurrentWallpaper">
 
+    <TextView
+        android:id="@+id/TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/current_wallpaper_list_tip"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/apply_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/TextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
