--- a/app/src/main/res/layout/activity_about_this_software.xml
+++ b/app/src/main/res/layout/activity_about_this_software.xml
@@ -6,4 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".AboutThisSoftware">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/bluegrape" />
+
+    <TextView
+        android:id="@+id/app_name_in_about"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
+
+    <TextView
+        android:id="@+id/app_version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_name_in_about" />
+
+    <Button
+        android:id="@+id/reward_and_contribution"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:onClick="reward_and_contribution"
+        android:text="@string/reward_and_contribution"
+        app:layout_constraintTop_toBottomOf="@+id/app_version"
+        tools:layout_editor_absoluteX="157dp" />
+
+    <Button
+        android:id="@+id/check_update"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="check_update"
+        android:text="@string/check_update"
+        app:layout_constraintTop_toBottomOf="@+id/reward_and_contribution"
+        tools:layout_editor_absoluteX="193dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
