--- a/app/src/main/res/layout/activity_about_this_software.xml
+++ b/app/src/main/res/layout/activity_about_this_software.xml
@@ -51,7 +51,16 @@
         android:layout_height="wrap_content"
         android:onClick="check_update"
         android:text="@string/check_update"
-        app:layout_constraintTop_toBottomOf="@+id/reward_and_contribution"
+        app:layout_constraintTop_toBottomOf="@+id/feedback"
         tools:layout_editor_absoluteX="193dp" />
+
+    <Button
+        android:id="@+id/feedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="feedback"
+        android:text="@string/feedback"
+        app:layout_constraintTop_toBottomOf="@+id/reward_and_contribution"
+        tools:layout_editor_absoluteX="160dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
