--- a/app/src/main/res/layout/activity_about_this_software.xml
+++ b/app/src/main/res/layout/activity_about_this_software.xml
@@ -13,27 +13,17 @@
         android:layout_marginTop="64dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/bluegrape" />
-
-    <TextView
-        android:id="@+id/app_name_in_about"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/app_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_name_in_about" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <Button
         android:id="@+id/reward_and_contribution"
