--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/app_icon"
-        android:layout_width="64px"
-        android:layout_height="64px"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:text="AppName"
-        android:textSize="28px"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/app_icon" />
 
     <TextView
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:text="PackageId"
-        android:textSize="20px"
+        android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/app_icon"
         app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
@@ -36,10 +36,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="28px"
-        android:layout_marginRight="4px"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:text="IsApply"
-        android:textSize="16px"
+        android:textSize="8sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
