--- a/app/src/main/res/xml/accessibility.xml
+++ b/app/src/main/res/xml/accessibility.xml
@@ -4,4 +4,5 @@
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagReportViewIds"
     android:canRetrieveWindowContent="true"
-    android:notificationTimeout="100" />
+    android:notificationTimeout="100"
+    android:description="@string/accessibility_description"/>
