--- a/app/src/main/res/layout/activity_current_wallpaper.xml
+++ b/app/src/main/res/layout/activity_current_wallpaper.xml
@@ -10,6 +10,9 @@
         android:id="@+id/TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/current_wallpaper_list_tip"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
