--- a/app/src/main/res/layout/activity_edit_wallpaper.xml
+++ b/app/src/main/res/layout/activity_edit_wallpaper.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".EditWallpaper">
     <LinearLayout
-        android:id="@+id/buttons"
+        android:id="@+id/text_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttons"
+        app:layout_constraintTop_toBottomOf="@+id/text_buttons"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
