--- a/app/src/main/res/layout/activity_apply_wallpaper.xml
+++ b/app/src/main/res/layout/activity_apply_wallpaper.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ApplyWallpaper">
 
     <Button
@@ -11,15 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="confirm_apply"
-        android:text="@string/confirm_apply"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/confirm_apply" />
+
+    <Switch
+        android:id="@+id/show_system_app"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:text="@string/show_system_app" />
 
     <ListView
         android:id="@+id/apps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/confirm_apply">
+        android:layout_weight="1">
 
     </ListView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
