--- a/app/src/main/res/layout/activity_edit_html_wallpaper.xml
+++ b/app/src/main/res/layout/activity_edit_html_wallpaper.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_buttons" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/preview_image"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="8dp"
@@ -61,7 +61,7 @@
         android:layout_marginLeft="8dp"
         android:text="@string/wallpaper_name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/preview_image" />
 
     <EditText
         android:id="@+id/wallpaper_name"
