继续完善功能。

--- a/app/src/main/res/layout/activity_edit_html_wallpaper.xml
+++ b/app/src/main/res/layout/activity_edit_html_wallpaper.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditVideoWallpaper">
+    tools:context=".EditHtmlWallpaper">
     <LinearLayout
         android:id="@+id/text_buttons"
         android:layout_width="match_parent"
@@ -40,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:gravity="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
