--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,17 @@
         app:layout_constraintTop_toBottomOf="@+id/my_wallpaper" />
 
     <Button
+        android:id="@+id/settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="open_settings"
+        android:text="@string/settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/current_wallpaper" />
+
+
+    <Button
         android:id="@+id/about_this_software"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,8 +45,7 @@
         android:text="@string/about_this_software"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/current_wallpaper" />
-
+        app:layout_constraintTop_toBottomOf="@+id/settings" />
 
     <LinearLayout
         android:id="@+id/buttons_in_main"
